# galaxias

./: .clang-format  CMakeLists.txt  LICENSE  main.cpp
core/: CMakeLists.txt  sources.cmake
core/include/core/: array.h  array.inl  files.h
core/src/: files.cpp
core/test/: CMakeLists.txt  array.cpp  files.cpp  owning_array.cpp
math/: CMakeLists.txt  sources.cmake
math/include/math/: analytic_roots.h  bounded_quantity.h  derived_quantity.h  quantity.h  range.h  range.inl  unit.h
math/include/math/colour/: colour.h
math/include/math/rng/: fixed_proba.h  mersenne.h  prng.h  shuffle.h
math/include/math/solver/: bisection.h  brent.h  function.h  newton_raphson.h  solver.h
math/src/: analytic_roots.cpp  quantity.cpp
math/src/colour/: blackbody.cpp  colour.cpp
math/src/rng/: mersenne.cpp  xoshiro256.cpp
math/src/solver/: bisection.cpp  brent.cpp  newton_raphson.cpp
math/test/: CMakeLists.txt  analytic_roots.cpp  bounded_quantity.cpp  colour.cpp  derived_quantity.cpp  quantity.cpp  range.cpp  rng_mersenne.cpp  rng_realise.cpp  rng_xoshiro.cpp  shuffle.cpp  solver_bisection.cpp  solver_brent.cpp  solver_newton_raphson.cpp
math/test/utils/: functions.h
orbit/: CMakeLists.txt  sources.cmake
orbit/include/orbit/: centerofmass.h  orbital_elements.h  position.h
orbit/src/: centerofmass.cpp  orbital_elements.cpp  position.cpp
orbit/src/keplersolver/: degenerate.h  elliptic.h  hyperbolic.h  parabolic.h  solver.cpp  solver.h
orbit/test/: CMakeLists.txt  centerofmass.cpp  gauss_problem.cpp  kepler_elliptic.cpp  kepler_hyperbolic.cpp  kepler_parabolic.cpp  position.cpp
orbit/test/utils/: kepler_checks.h
system/: CMakeLists.txt  sources.cmake
system/include/system/: body.h  system.h  system_identifier.h
system/src/: galactic_quantity.h  system.cpp  system_identifier.cpp
system/src/bodies/: planet.cpp  planet.h  star.cpp  star.h
system/src/quantity/: earth.h  galactic.h  solar.h
system/test/: CMakeLists.txt  planet.cpp  quantities.cpp  star.cpp  system.cpp  system_identifier.cpp
ui/: CMakeLists.txt  sources.cmake
ui/include/ui/: canvas.h  ui.h
ui/src/: buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  device.cpp  device.h  renderer.cpp  renderer.h  ui.cpp  ui.h  utils.h  vertex_buffer.cpp  vertex_buffer.h
